--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.4.3"
   },
   "dependencies": {
-    "@lucien144/vue3-parallaxy": "^0.1.0"
+    "@lucien144/vue3-parallaxy": "^0.1.0",
+    "vue3-carousel": "^0.3.1"
   }
 }
